--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
     <!-- 购物车面板 -->
     <div class="cart-overlay" id="cartOverlay">
         <div class="cart-panel">
-            <h2>购物车</h2>
+            <div class="cart-header">
+                <h2>购物车</h2>
+                <button class="close-cart-btn" id="closeCartBtn">×</button>
+            </div>
             <div class="cart-items" id="cartItems">
                 <!-- 购物车商品将通过JavaScript动态添加 -->
             </div>
