--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
     <!-- 活动优惠 -->
     <section class="promotion">
         <div class="panel">
-            <h2 class="promo-title">🎉 活动优惠：<span class="promo-text">新店开业，全场8折 🎉</span></h2>
+            <h2 class="promo-title">🎉 活动优惠 🎉：<span class="promo-text">新店开业，全场8折!</span></h2>
         </div>
     </section>
 
@@ -589,8 +589,8 @@
                 name: "PvP 补给盒",
                 category: "kit",
                 image: "images/regear_kit.png",
-                pricePerUnit: 8,
-                pricePerBox: 8,
+                pricePerUnit: 2.9,
+                pricePerBox: 2.9,
                 unit: "组",
                 box: "盒",
                 enableUnit: false,
@@ -675,163 +675,163 @@
                 image: "images/obsidian.png",
                 pricePerUnit: 2,
                 pricePerBox: 0.3,
-                unit: "个",
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 9,
-                name: "烈焰棒",
-                category: "material",
-                image: "images/blaze_rod.png",
-                pricePerUnit: 1,
-                pricePerBox: 1,
-                unit: "个",
+                name: "金苹果",
+                category: "consumable",
+                image: "images/golden_apple.png",
+                pricePerUnit: 3,
+                pricePerBox: 3,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 10,
-                name: "金苹果",
+                name: "不死图腾",
                 category: "consumable",
-                image: "images/golden_apple.png",
-                pricePerUnit: 3,
-                pricePerBox: 3,
-                unit: "个",
+                image: "images/totem_of_undying.png",
+                pricePerUnit: 0.2,
+                pricePerBox: 0.2,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 11,
-                name: "不死图腾",
+                name: "喷溅型力量药水",
                 category: "consumable",
-                image: "images/totem_of_undying.png",
-                pricePerUnit: 0.2,
-                pricePerBox: 0.2,
-                unit: "个",
+                image: "images/strength_potion.png",
+                pricePerUnit: 0.5,
+                pricePerBox: 0.5,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 12,
-                name: "喷溅型力量药水",
+                name: "喷溅型神龟药水",
                 category: "consumable",
-                image: "images/strength_potion.png",
+                image: "images/turtle_master_potion.png",
                 pricePerUnit: 0.5,
                 pricePerBox: 0.5,
-                unit: "个",
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 13,
-                name: "喷溅型神龟药水",
-                category: "consumable",
-                image: "images/turtle_master_potion.png",
-                pricePerUnit: 0.5,
-                pricePerBox: 0.5,
-                unit: "个",
-                box: "盒",
-                enableUnit: false,
-                enableBox: true
-            },
-            {
-                id: 14,
                 name: "鞘翅 | 普通",
                 category: "travel",
                 image: "images/elytra_normal.png",
                 pricePerUnit: 1.5,
                 pricePerBox: 20,
-                unit: "个",
+                unit: "组",
+                box: "盒",
+                enableUnit: true,
+                enableBox: true
+            },
+            {
+                id: 14,
+                name: "鞘翅 | 满配",
+                category: "travel",
+                image: "images/elytra_full.png",
+                pricePerUnit: 1.8,
+                pricePerBox: 25,
+                unit: "组",
                 box: "盒",
                 enableUnit: true,
                 enableBox: true
             },
             {
                 id: 15,
-                name: "鞘翅 | 满配",
-                category: "travel",
-                image: "images/elytra_full.png",
-                pricePerUnit: 1.8,
-                pricePerBox: 25,
-                unit: "个",
-                box: "盒",
-                enableUnit: true,
-                enableBox: true
-            },
-            {
-                id: 16,
                 name: "烟花火箭 | 1 速",
                 category: "travel",
                 image: "images/firework_rocket.png",
                 pricePerUnit: 0.5,
                 pricePerBox: 0.5,
-                unit: "个",
+                unit: "组",
+                box: "盒",
+                enableUnit: false,
+                enableBox: true
+            },
+            {
+                id: 16,
+                name: "烟花火箭 | 3 速",
+                category: "travel",
+                image: "images/firework_rocket.png",
+                pricePerUnit: 0.7,
+                pricePerBox: 0.7,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 17,
-                name: "烟花火箭 | 3 速",
-                category: "travel",
-                image: "images/firework_rocket.png",
-                pricePerUnit: 0.7,
-                pricePerBox: 0.7,
-                unit: "个",
+                name: "末影珍珠",
+                category: "consumable",
+                image: "images/ender_pearl.png",
+                pricePerUnit: 1,
+                pricePerBox: 1,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 18,
-                name: "末影珍珠",
+                name: "附魔之瓶",
                 category: "consumable",
-                image: "images/ender_pearl.png",
-                pricePerUnit: 1,
-                pricePerBox: 1,
-                unit: "个",
+                image: "images/experience_bottle.png",
+                pricePerUnit: 3,
+                pricePerBox: 3,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 19,
-                name: "附魔之瓶",
-                category: "consumable",
-                image: "images/experience_bottle.png",
-                pricePerUnit: 3,
-                pricePerBox: 3,
-                unit: "个",
+                name: "绿宝石块",
+                category: "building",
+                image: "images/emerald_block.png",
+                pricePerUnit: 8,
+                pricePerBox: 8,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 20,
-                name: "绿宝石块",
+                name: "金块",
                 category: "building",
-                image: "images/emerald_block.png",
-                pricePerUnit: 8,
-                pricePerBox: 8,
-                unit: "个",
+                image: "images/gold_block.png",
+                pricePerUnit: 3,
+                pricePerBox: 3,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 21,
-                name: "金块",
+                name: "铁块",
                 category: "building",
-                image: "images/gold_block.png",
+                image: "images/iron_block.png",
                 pricePerUnit: 2.9,
                 pricePerBox: 2.9,
-                unit: "个",
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
@@ -843,81 +843,141 @@
                 image: "images/oak_log.png",
                 pricePerUnit: 0.5,
                 pricePerBox: 0.5,
-                unit: "个",
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 23,
-                name: "铁块",
-                category: "building",
-                image: "images/iron_block.png",
-                pricePerUnit: 3.9,
-                pricePerBox: 3.9,
-                unit: "个",
+                name: "金胡萝卜",
+                category: "consumable",
+                image: "images/golden_carrot.png",
+                pricePerUnit: 1.9,
+                pricePerBox: 1.9,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 24,
-                name: "金胡萝卜",
-                category: "consumable",
-                image: "images/golden_carrot.png",
-                pricePerUnit: 1.9,
-                pricePerBox: 1.9,
-                unit: "个",
+                name: "潜影壳",
+                category: "material",
+                image: "images/shulker_shell.png",
+                pricePerUnit: 6.9,
+                pricePerBox: 6.9,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 25,
-                name: "潜影壳",
+                name: "烈焰棒",
                 category: "material",
-                image: "images/shulker_shell.png",
-                pricePerUnit: 6.9,
-                pricePerBox: 6.9,
-                unit: "个",
+                image: "images/blaze_rod.png",
+                pricePerUnit: 1,
+                pricePerBox: 1,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 26,
-                name: "凋零骷髅头颅",
+                name: "恶魂之泪",
                 category: "material",
-                image: "images/wither_skeleton_skull.png",
-                pricePerUnit: 1,
-                pricePerBox: 15,
-                unit: "个",
+                image: "images/ghast_tear.png",
+                pricePerUnit: 1.9,
+                pricePerBox: 1.9,
+                unit: "组",
                 box: "盒",
-                enableUnit: true,
+                enableUnit: false,
                 enableBox: true
             },
             {
                 id: 27,
-                name: "粘液块",
-                category: "material",
-                image: "images/slime_block.png",
-                pricePerUnit: 3,
-                pricePerBox: 3,
-                unit: "个",
+                name: "沙子",
+                category: "building",
+                image: "images/sand.png",
+                pricePerUnit: 1,
+                pricePerBox: 1,
+                unit: "组",
                 box: "盒",
                 enableUnit: false,
                 enableBox: true
             },
             {
                 id: 28,
-                name: "钻石块",
+                name: "沙砾",
                 category: "building",
-                image: "images/wither_skeleton_skull.png",
+                image: "images/gravel.png",
                 pricePerUnit: 1,
-                pricePerBox: 15,
-                unit: "个",
+                pricePerBox: 1,
+                unit: "组",
                 box: "盒",
-                enableUnit: true,
+                enableUnit: false,
+                enableBox: true
+            },
+            {
+                id: 29,
+                name: "玻璃",
+                category: "building",
+                image: "images/glass.png",
+                pricePerUnit: 1.2,
+                pricePerBox: 1.2,
+                unit: "组",
+                box: "盒",
+                enableUnit: false,
+                enableBox: true
+            },
+            {
+                id: 30,
+                name: "火药",
+                category: "material",
+                image: "images/gunpowder.png",
+                pricePerUnit: 0.5,
+                pricePerBox: 0.5,
+                unit: "组",
+                box: "盒",
+                enableUnit: false,
+                enableBox: true
+            },
+            {
+                id: 31,
+                name: "甘蔗",
+                category: "material",
+                image: "images/blaze_rod.png",
+                pricePerUnit: 0.3,
+                pricePerBox: 0.3,
+                unit: "组",
+                box: "盒",
+                enableUnit: false,
+                enableBox: true
+            },
+            {
+                id: 32,
+                name: "红石块",
+                category: "building",
+                image: "images/redstone_block.png",
+                pricePerUnit: 1,
+                pricePerBox: 1,
+                unit: "组",
+                box: "盒",
+                enableUnit: false,
+                enableBox: true
+            },
+            {
+                id: 33,
+                name: "活塞",
+                category: "building",
+                image: "images/piston.png",
+                pricePerUnit: 4,
+                pricePerBox: 4,
+                unit: "组",
+                box: "盒",
+                enableUnit: false,
                 enableBox: true
             }
         ];
