--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
                 id: 31,
                 name: "甘蔗",
                 category: "material",
-                image: "images/blaze_rod.png",
+                image: "images/sugar_cane.png",
                 pricePerUnit: 0.3,
                 pricePerBox: 0.3,
                 unit: "组",
